<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bkup_path"
        android:id="@+id/textView1"
        android:textSize="17dip"
        android:textColor="@color/pc_cyan" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bkup_int"
            android:id="@+id/intSD"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bkup_ext"
            android:id="@+id/extSD"
            android:layout_marginLeft="10dp" />

    </RadioGroup>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bkup_name"
            android:id="@+id/textView2"
            android:textSize="17dip"
            android:textColor="@color/pc_cyan" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bkname"
            android:layout_gravity="center_horizontal"
            android:inputType="text" />
    </LinearLayout>

</LinearLayout>