<?xml version="1.0" encoding="utf-8"?>
<!-- Created by h0rn3t on 21.07.2013.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <LinearLayout
            android:id="@+id/device"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        android:layout_margin="10dip">
    <TextView
            android:id="@+id/model"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="54sp"
        android:gravity="center_horizontal" />
    <TextView
            android:id="@+id/board"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dip"
        android:singleLine="false"
        android:gravity="center_horizontal" />


    <TextView
        android:id="@+id/flashinfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/unsupported_info"
        android:textSize="16dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/pc_yellow"
        android:layout_marginTop="10dip" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_wait"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wait"
            android:id="@+id/textView"
            android:layout_gravity="center" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tools"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:visibility="gone">

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_part"
                android:id="@+id/partBtn"
                android:layout_gravity="center_horizontal|bottom" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_flash"
            android:id="@+id/flashBtn"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_switch"
            android:id="@+id/switchBtn"
            android:layout_gravity="center_horizontal|bottom" />
    </LinearLayout>


</LinearLayout>